modified by raghav to implement booths in cadre registrations

--- a/partyanalyst/trunk/src/main/resources/globalmessages.properties
+++ b/partyanalyst/trunk/src/main/resources/globalmessages.properties
@@ -26,6 +26,7 @@ MP=Member Of Parliament
 CONSTITUENCY=Constituency
 ACONSTITUENCY=Assembly Constituency
 PCONSTITUENCY=Parliament Constituency
+booth = Booth
 PARTY=Party
 problem=Problem
 description=Description
