modified by raghav to fix bugs in cadre registration pre population

--- a/partyanalyst/trunk/src/main/resources/globalmessages.properties
+++ b/partyanalyst/trunk/src/main/resources/globalmessages.properties
@@ -39,7 +39,7 @@ MANDAL=Tehsil/Mandal
 TehsilOrMuncipality = Tehsil/Muncipality
 MANDAL=Tehsil/Municipality/Corporation
 VILLAGE=Village
-wardOrHamlet = Village/Ward
+wardOrHamlet = Village/Ward/Division
 HAMLET=Hamlet
 CADRE_LEVEL=Cadre Level
 CADRE_LEVEL_VALUE=Cadre Level Value
