--- a/partyanalyst-service/trunk/pom.xml
+++ b/partyanalyst-service/trunk/pom.xml
@@ -75,6 +75,13 @@
                    <artifactId>easymock</artifactId>
                    <version>2.0</version>
         </dependency>
+        
+        <dependency>
+			    <groupId>org.apache.poi</groupId>
+			    <artifactId>poi</artifactId>
+			    <version>3.5-beta3</version>
+        </dependency>
+        
 
 		<!-- Hibernate / MySql -->
 		<dependency>
