--- a/partyanalyst/trunk/src/main/resources/globalmessages.properties
+++ b/partyanalyst/trunk/src/main/resources/globalmessages.properties
@@ -192,7 +192,7 @@ profession = Profession/Occupation
 socialStatus = Caste Category
 houseNo = House No
 street = Street Name
-income = Annual Income 
+income = Annual Income in RS
 partyCommittee = Party Committee
 memberType = Member Type 
 officialAdd = Official Address 
