Modified by Swathi

--- a/partyanalyst/trunk/src/main/resources/global_ErrorMessages.properties
+++ b/partyanalyst/trunk/src/main/resources/global_ErrorMessages.properties
@@ -10,6 +10,6 @@ electionYearMsg = Please select Election Year.
 ConstituencyNameMsg = Please select Constituency.
 partyNameMsg = Please select Party.
 electionScopeMsg = Please select Election Scope. 
-oneElectionMsg = has Participated in only one Election.
+oneElectionMsg = Election Comparision is For The Parties Participated in More than One Election Years.
 constTypeAlert = Please Select Constituency Type
 selectStateMsg = Please Select a State.
