global_ErrorMessages Modified fix  by Swathi

--- a/partyanalyst/trunk/src/main/resources/global_ErrorMessages.properties
+++ b/partyanalyst/trunk/src/main/resources/global_ErrorMessages.properties
@@ -5,11 +5,11 @@ smsSuccess = SMS Successfully Sent
 remainingSMS = Messages Are Available
 smsQuotaClosed = You Can not send Messages Any More
 exceptionMsg = Unable to process your request due to exception..
-electionTypeMsg = Please select Election Type.
-electionYearMsg = Please select Election Year.
-ConstituencyNameMsg = Please select Constituency.
-partyNameMsg = Please select Party.
-electionScopeMsg = Please select Election Scope. 
+electionTypeMsg = Please Select Election Type.
+electionYearMsg = Please Select Election Year.
+ConstituencyNameMsg = Please Select Constituency.
+partyNameMsg = Please Select Party.
+electionScopeMsg = Please Select Election Scope. 
 oneElectionMsg = Election Comparision is For The Parties Participated in More than One Election Years.
 constTypeAlert = Please Select Constituency Type
 selectStateMsg = Please Select a State.
