party result report bug fix by Anil

--- a/partyanalyst/trunk/src/main/resources/global_ErrorMessages.properties
+++ b/partyanalyst/trunk/src/main/resources/global_ErrorMessages.properties
@@ -13,3 +13,4 @@ electionScopeMsg = Please Select Election Scope.
 oneElectionMsg = Election Comparision is For The Parties Participated in More than One Election Years.
 constTypeAlert = Please Select Constituency Type
 selectStateMsg = Please Select a State.
+noResults = No Results Available for Input Selection, Please Choose Another Option ..
