--- a/partyanalyst/trunk/pom.xml
+++ b/partyanalyst/trunk/pom.xml
@@ -338,7 +338,12 @@
 				<exclusion />
 
 			</exclusions>
-		</dependency>		
+		</dependency>
+		<dependency>
+	      <groupId>org.tuckey</groupId>
+	      <artifactId>urlrewritefilter</artifactId>
+	      <version>3.2.0</version>
+	    </dependency>
 	</dependencies>
 
 </project>
