--- a/partyanalyst/trunk/src/main/webapp/WEB-INF/web.xml
+++ b/partyanalyst/trunk/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,21 @@
         <filter-name>hibernateFilter</filter-name>
         <filter-class>com.itgrids.partyanalyst.util.OpenSessionInViewAutoFlushFilter</filter-class>       
 	</filter>
-
+    <filter>
+        <filter-name>UrlRewriteFilter</filter-name>
+        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+        <init-param>
+            <param-name>logLevel</param-name>
+            <param-value>WARN</param-value>
+        </init-param>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>UrlRewriteFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    	<dispatcher>FORWARD</dispatcher>    
+    </filter-mapping>
 	<filter-mapping>
         <filter-name>hibernateFilter</filter-name>
         <url-pattern>*.action</url-pattern>
