homepagequestions modification in web by hasa

--- a/partyanalyst/trunk/src/main/resources/globalmessages.properties
+++ b/partyanalyst/trunk/src/main/resources/globalmessages.properties
@@ -214,3 +214,15 @@ enOption = Please Enter Option
 validEDate = Please Enter a Valid End Date
 subRegions = Mandal/Municipality/Corp/GMC
 
+#HomePageQuestionsLabels
+
+questionStartDate = Question Start Date
+questionEndDate = Question End Date
+ansDescription = Label
+ansValue = Data
+enterQuestionStartDate = Enter Question Start Date
+enterQuestionEndDate = Enter Question End Date
+enAnswer = Enter Both Label And Data of answer 
+answerDetails = Answer Details
+
+ 
