homePage.jsp to view election results

--- a/partyanalyst/trunk/src/main/resources/common_Lables.properties
+++ b/partyanalyst/trunk/src/main/resources/common_Lables.properties
@@ -121,3 +121,5 @@ stateSelect =Select Your State
 distSelect = Select Your District
 constSelect =Select Your Constituency
 localBodies = Select Local Body
+electionTypeInHome = Select Election Type
+electionYearInHome = Select Election Year
