--- a/partyanalyst-service/trunk/src/test/resources/jdbc.properties
+++ b/partyanalyst-service/trunk/src/test/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/party_analyst_schema
+jdbc.url=jdbc:mysql://localhost:3306/dakavara
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.username=root
 jdbc.password=root
